PSGDriveSync Updated 23rd Feb 2023

--- a/psgdrivesync/help/autosyncdrive.html
+++ b/psgdrivesync/help/autosyncdrive.html
@@ -5,7 +5,7 @@
     <body>
         <p>
             AutoSync allows a drive saved in the application to be mounted automatically and have its sync operations started right after. This allows the drive to 
-            sync its files and folders with other drives even though those drives themselves do not have "Auto Sync" enabled on them<br/><br/>.For example, If Drive A has been set to 
+            sync its files and folders with other drives even though those drives themselves do not have "Auto Sync" enabled on them.<br/><br/>For example, If Drive A has been set to 
             sync its file "File A" with Drive B and Drive B has been set to sync its file "File B" with Drive A and "Auto Sync" has only been enabled on Drive A but not Drive B
             then the following actions will take place 
             <ul>
