--- a/psgdrivesync/help/filters.html
+++ b/psgdrivesync/help/filters.html
@@ -6,15 +6,15 @@
         <table>
             <tr style = "width: 100%; height:100%">
                 <td style = "width:50% ; height:100%">
-                    <img src = "../assets/img/filters/filters.png" width="100%" height = "100%">
+                    <img src = "../assets/img/filters/filters.png" width="auto" height = "auto">
                 </td>
                 <td style = "width:50% ; height:100%">
                     <p>
-                        "Filters" is an application functionality that allows for conditional syncing to take place. This functionality works only in sync operations
+                        <p>"Filters" is an application functionality that allows for conditional syncing to take place. This functionality works only in sync operations
                         and not real time file operations. After a filter has been created then it needs to be attached to a file or folder to take effect. These files or 
                         folders which have filtered attached to them are termed as "Filtered Files".<br/>
                         The relationship between Filters and Filtered files is many to many where one Filter can be attached to many filtered files and one filtered file 
-                        can be multiple filters attached to it. Filters are of 4 types namely
+                        can be multiple filters attached to it. Filters are of 4 types namely</p>
                         <ul>
                             <li>Time - This type of filter contains the following properties
                                 <ul>
@@ -57,9 +57,9 @@
                             </li>
                         </ul>
                         <br/><br/>
-                        Filter operations can be used with any filter type and carry the same meaning that their analog in math operations do. For example, a time filter setup with "Current Date" property and 
+                        <p>Filter operations can be used with any filter type and carry the same meaning that their analog in math operations do. For example, a time filter setup with "Current Date" property and 
                         "Less than" operator will check if the current date on your computer is less than the date specified as the value of the filter and sync the file or folder that its linked to if the 
-                        result of the comparison is true otherwise the file or folder wont get synced. Following is a list of operators which can be assigned to "Filters"
+                        result of the comparison is true otherwise the file or folder wont get synced. Following is a list of operators which can be assigned to "Filters".</p>
                         <ul>
                             <li>Equal to</li>
                             <li>Not Equal to</li>
@@ -70,7 +70,7 @@
                             <li>Greater than or equal to</li>
                         </ul>
                         <br/><br/>
-                        Filters can also be set as "Inheritable" however this can only be done during setting up of Filtered Files in the "Filters" window.The Filtered File which is being setup 
+                        <p>Filters can also be set as "Inheritable" however this can only be done during setting up of Filtered Files in the "Filters" window.The Filtered File which is being setup 
                         must be a Folder in order for the attached filters to be setup as "Inheritable".Filter marked as "Inheritable" do not apply to their linked Folder instead those kind of
                         filters apply to all the child files and folders contained in the folder itself.<br/>
                         For example: A filter has been set as "Folder" type with its property set to "Name", Operator set to "Equal to" and Value set to "Test" and has been linked to a folder named "Folder123". This 
@@ -80,6 +80,7 @@
                         <br/><br/>
                         If multiple filters are linked to a filtered file or folder then for that file or folder to pass the filter test and sync successfully, all the filters attached to it should pass. even if one 
                         filter fails then the file or folder will not sync.
+                        </p>
                     </p>
                 </td>
             </tr>
