--- a/psgdrivesync/help/masterkey.html
+++ b/psgdrivesync/help/masterkey.html
@@ -6,7 +6,7 @@
         <table>
             <tr style = "width: 100%; height:100%">
                 <td style = "width:50% ; height:100%">
-                    <img src = "../assets/img/masterkey/masterkey1.png" width="100%" height = "100%"><br/><br/><br/>
+                    <img src = "../assets/img/masterkey/masterkey1.png" width="auto" height = "auto"><br/><br/><br/>
                 </td>
                 <td style = "width:50% ; height:100%">
                     <p>
