--- a/psgdrivesync/help/applicationmenubar.html
+++ b/psgdrivesync/help/applicationmenubar.html
@@ -6,7 +6,7 @@
         <table>
             <tr style = "width: 100%; height:100%">
                 <td style = "width:50% ; height:100%">
-                    <img src = "../assets/img/userinterface/applicationmenubar.png" width="100%" height = "100%">
+                    <img src = "../assets/img/userinterface/applicationmenubar.png" width= "auto" height = "auto">
                 </td>
                 <td style = "width:50% ; height:100%">
                     <p>
