Remaining Updates on 23rd Feb 2023

--- a/psgdrivesync/index.html
+++ b/psgdrivesync/index.html
@@ -622,8 +622,15 @@
 			<div class="col-lg-5">
 				<h3>Email Address</h3>
 				<p>
+				<img src = "assets/img/architect.png" width = "100px" height = "100px"><br/>
 				parmeet.s.ghai@gmail.com<br/>
+				parmeet.s.ghai.storage@gmail.com<br/>
 				parmeet.s.ghai.businesssolutions@gmail.com<br/>
+				</p>
+				<h3>Address</h3>
+				<p>
+				New Delhi <br/>
+				India
 				</p>
 			</div>
 		</div>
