--- a/index.html
+++ b/index.html
@@ -1,11 +1,166 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="3; URL=https://parmeetsinghghai.github.io/psgdrivesync/index.html" />
+  <title>Parmeet Singh Ghai's Home Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <script src="assets/js/bootstrap.js"></script>
+  <script>
+    function LoadPage(id)
+    {
+        var display = document.getElementById("Display");
+        var srcPage = id.toLowerCase() +".html"; 
+        display.src = srcPage;
+        display.loadedPage = srcPage;
+    }
+    </script>
 </head>
+<body class ="pt-5" background="assets/img/body.jpg">
 
-<body>
-<p> Parmeet Singh Ghai Home Page - Under Contruction. Please check in again in a few days<p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <h2 class = "text-white bg-dark">Parmeet Singh Ghai</h2>
+    </div>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Education</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Work Experience</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Awards & Certifications</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<div class="container m-0 mt-5">
+    <div class="row">
+        <div class="col-sm-3">
+            <div>
+            <img class = "col-sm-9" src = "assets/img/architect.png">
+            </div>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <hr class="d-sm-none">
+        </div>
+
+        <div class="col-sm-9">
+            <h5 class = "text-center rounded" style = "background-color: blue;color:white"><img src="assets/img/trophy.png">&nbsp;Awards & Certifications</h5>
+            
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="assets/img/slide1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                    <img src="assets/img/slide2.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                    <img src="assets/img/slide3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                </div>
+        </div>
+    </div>
+
+    <div class="row" style="height:750px">
+        <div class="col-sm-3">
+            <nav class="navbar sticky-top">
+                <ul class="navbar-nav pt-5">
+                    <li class="disabled">
+                        <h3>&nbsp;</h3>
+                    </li>
+                    <li class="disabled">
+                        <h5 class = "text-center rounded" style = "background-color: blue;color:white">Resume</h5>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="education" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/books.png">&nbsp;Education</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="work" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/factory.png">&nbsp;Work Experience</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="skills" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/pencil.png">&nbsp;Skills</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="projects" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/project.png">&nbsp;Projects</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="awards" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/trophy.png">&nbsp;Awards & Certifications</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="hobbies" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/hobby.png">&nbsp;Hobbies & Interests</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="languages" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/language.png">&nbsp;Languages</button>
+                    </li>
+                    <br/>
+                    <li class="nav-item">
+                        <button id="contact" type="button" class="btn btn-outline-secondary text-nowrap" onclick="LoadPage(this.id)"><img src="assets/img/contact.png">&nbsp;Contact</button>
+                    </li>
+                </ul>
+            </nav> 
+        </div>
+    
+        <div class = "col-sm-9 pt-5">
+            <br/>
+            <br/>
+            <iframe id="Display" src="" style="width:100%;height:100%;border-style:solid">
+
+            </iframe>
+        </div>
+    </div>
+</div>
+
+
+<div class="mt-5 p-4 bg-dark text-white text-center">
+  
+</div>
+
 </body>
-
 </html>
