--- a/psgdrivesync/help/keyboardshortcuts.html
+++ b/psgdrivesync/help/keyboardshortcuts.html
@@ -16,7 +16,10 @@
                                 Ctrl + S  - allows users to Save data items whenever possible.
                             </li>
                             <li>
-                                Ctrl + A - allows users to Add data items whenever possible. 
+                                Ctrl + N - allows users to Add New data item(s) whenever possible. 
+                            </li>
+                            <li>
+                                Ctrl + A - allows users to Select All data items whenever possible. 
                             </li>
                             <li>
                                 Ctrl + C - allows users to Copy data items from list of data items.
