--- a/psgdrivesync/help/addfilter.html
+++ b/psgdrivesync/help/addfilter.html
@@ -5,7 +5,7 @@
     <body>
         <p>
             Adding a filter requires its type, property, operator and value to setup along with a unique name. Once a filter gets saved then its name cannot be changed
-            however its type, property, operator and value can always be modified. The followings are the steps needed to be performed in order to add a filter in the application.
+            however its type, property, operator and value can always be modified. The following are the steps needed to be performed in order to add a filter in the application.
         <p/>
 
         <table>
