Added google site meta data
added google site meta content :
<meta name="google-site-verification" content="yROjZBD3J4IbqYMWni3ZbIWKLYV9xvJnIUgfjI0SX6M" />

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Parmeet Singh Ghai's Home Page</title>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="yROjZBD3J4IbqYMWni3ZbIWKLYV9xvJnIUgfjI0SX6M" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <script src="assets/js/bootstrap.js"></script>
