Fixed Resume and Index
Fixed ISTQB Percentage in marks from 73% to 75% and fixed list UL tags (Chevron) in Index.html so only Chevron would show. Had set list <ul>  style="list-style-type: none"

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                             <div class="col section-info">
                                 PSGDriveSync application has been build on Dot Net Framework 4.8 and was programmed in C#. It is currently only supported on Windows Operation System. The Application
                                 allows users to perform real-time file transfer operations and automated sync operations between<br/><br/>
-                                <ul>
+                                <ul style="list-style-type: none">
                                     <li><i class="arr-right"></i> <strong>Local Drive to Local Drive</strong></li>
                                     <li><i class="arr-right"></i> <strong>Local Drive to Google Drive</strong></li>
                                     <li><i class="arr-right"></i> <strong>Google Drive to Local Drive</strong></li>
@@ -673,18 +673,18 @@
                                     <div class="col section-info">
                                         Perform Real-Time File Operations like Cut, Copy, Paste, Encrypt, Decrypt etc On the Spot. You Can Perform The Following Real Time File Operations On Any One of Your Local and Google Drives AnyTime
 
-                                        <ul>
-                                            <li>Create New File & Folder</li>
-                                            <li>Cut, Copy and Paste File(s) & Folder(s)</li>
-                                            <li>Delete File(s) & Folder(s)</li>
-                                            <li>Rename File(s) & Folder(s)</li>
-                                            <li>Select All File(s) & Folder(s)</li>
-                                            <li>View File & Folder Properties</li>
-                                            <li>Encrypt File(s) & Folder(s)</li>
-                                            <li>Decrypt File(s) & Folder(s)</li>
-                                            <li>Compare File(s) & Folder(s)</li>
-                                            <li>Search For Encrypted Files</li>
-                                            <li>Send Files & Folders to Filters Window</li>
+                                        <ul style="list-style-type: none">
+                                            <li><i class="arr-right"></i> <span>Create New File & Folder</span></li>
+                                            <li><i class="arr-right"></i> <span>Cut, Copy and Paste File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Delete File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Rename File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Select All File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>View File & Folder Properties</span></li>
+                                            <li><i class="arr-right"></i> <span>Encrypt File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Decrypt File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Compare File(s) & Folder(s)</span></li>
+                                            <li><i class="arr-right"></i> <span>Search For Encrypted Files</span></li>
+                                            <li><i class="arr-right"></i> <span>Send Files & Folders to Filters Window</span></li>
                                         </ul>
                                     </div>
                                 </div>   
@@ -773,7 +773,7 @@
                             <hr/>
                             <div class="col section-info">
                                 PSGPasswordManager application has also been built on Dot Net Framework 4.8 using C# as the programming language. Its currently only supported in Windows Operating System and Requires Dot Net 4.8 Runtime to be installed on the end user's machine. it allow users to 
-                                <ul>
+                                <ul style="list-style-type: none">
                                     <li><i class="arr-right"></i> <strong>Create Secure and Random Passwords upto 2000 Characters Long for One Time Use.</strong></li>
                                     <li><i class="arr-right"></i> <strong>Save Those Password in Secure Local Files called 'Vaults' which are themselves encrypted with AES-256 Encryption Standard using a Master Password that only the User knows.</strong></li>
                                 </ul> 
